[package]
name = "ring360"
version = "0.2.6"
edition = "2021"
description = "Simple wrapper type for 64-bit floats representing degrees around a circle. It supports basic arithmetic operations (+, -) and calculates the shortest angles between two degrees on a circle."
repository = "https://github.com/neilg63/ring360"
categories = ["mathematics"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
